--- a/form.html
+++ b/form.html
@@ -113,6 +113,7 @@
             //     <h5>${ageInput.value}</h5>
             //     <p>${phoneInput.value}</p>`
 
+            // oppure creo gli elementi singolarmente (più vantaggioso per gestire gli eventi successivi)
             const h3 = document.createElement("h3")
             h3.innerText = `${nameInput.value} ${surnameInput.value}`
 
